# BnoteSync

./: .gitignore
.gptcache/: config.txt  functions.txt  structure.txt
backend/: alembic.ini  pyproject.toml
backend/_data/: dev.db
backend/alembic/: env.py
backend/alembic/versions/: 0c930f575745_add_release_status_to_std_release.py  156620640f7c_std_tables.py  2b473cff468d_create_std_tables_fix.py  7b90e9b23215_add_std_kind_to_std_nodes_gwm_swm.py  83d1a183296a_init.py  8565be0116c4_std_wms_link.py  a7f406eadfd1_std_tables.py  f0c2f6bcbd61_wms_tables.py
backend/app/: deps.py  main.py
backend/app/auth/: models.py  router.py  schemas.py  utils.py
backend/app/locks/: router.py  schemas.py
backend/app/shared/: config.py  db.py
backend/app/standards/: guard.py  models.py  router copy.py  router.py  schemas.py  utils.py
backend/app/wms/: models.py  router.py  schemas.py
backend/bnote_sync_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/pages/: calc.jsx  login.jsx  projects.jsx  reporting.jsx  standards.jsx  std_base.jsx  std_gwm copy.jsx  std_gwm.jsx  std_swm.jsx  wms.jsx
frontend/src/shared/api/: columnOrder.js  index.js  std.js  wms.js
frontend/src/shared/ui/: resizableColumns.jsx  useResizablePane.js
samples/: AR.xlsx  FP.xlsx  SS.xlsx
