[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bnote-sync-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "passlib[bcrypt]>=1.7.4",
  "PyJWT>=2.8.0",
  "psycopg[binary]>=3.2.1",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = ["ruff>=0.5.5", "black>=24.4.2", "pytest>=8.3.1", "pytest-asyncio>=0.23.7", "anyio>=4.4.0"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP","SIM","N"]
ignore = ["E501"]
target-version = "py313"

[tool.pytest.ini_options]
pythonpath = ["backend"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*", "tests*", "scripts*"]